--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "react-scripts": "5.0.1",
     "sass": "^1.83.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b deploy -d build"
   },
   "eslintConfig": {
     "extends": [
