--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b deploy -d build"
+    "deploy": "npm run build && gh-pages -b deploy -d build"
   },
   "eslintConfig": {
     "extends": [
